--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,12 @@
-@import "base/_base.fonts.scss";
+@import "settings/_settings.colors.scss";
+@import "settings/_settings.fonts.scss";
 
+@import "base/_base.fonts.scss";
+@import "base/_base.margins.scss";
 @import "base/_base.body.scss";
+@import "base/_base.forms.scss";
+
+@import "layout/_layout.container.scss";
+
+@import "components/_components.siteheader.scss";
+@import "components/_components.mainnav.scss";
