--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -1,18 +1,18 @@
 ---
-permalink: index.html
+permalink: about/index.html
 ---
 {% extends "layouts/base.njk" %}
 
-{% set metaTitle = "Home" %}
+{% set metaTitle = "About" %}
 {% set metaDescription = "This is an SEO description for this page" %}
 {% set metaImage = site.metaImage %}
 
-{% set navSection = "home" %}
+{% set navSection = "about" %}
 
 {% block content %}
 <main>
   <div class="l-container">
-    <p>Homepage</p>
+    <p>About</p>
   </div>
 </main>
 {% endblock %}
