--- a/src/assets/scss/base/_base.body.scss
+++ b/src/assets/scss/base/_base.body.scss
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font: 400 100%/1.5 "Open Sans", "Helvetica", "Arial", sans-serif;
-  background-color: #ffffff;
-  color: #000000;
+  font: 400 100%/1.5 var(--fontstack-main);
+  background-color: var(--color-white);
+  color: var(--color-black);
+  min-height: 100vh;
 }
