--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -1,18 +1,18 @@
 ---
-permalink: index.html
+permalink: contact/index.html
 ---
 {% extends "layouts/base.njk" %}
 
-{% set metaTitle = "Home" %}
+{% set metaTitle = "Contact" %}
 {% set metaDescription = "This is an SEO description for this page" %}
 {% set metaImage = site.metaImage %}
 
-{% set navSection = "home" %}
+{% set navSection = "contact" %}
 
 {% block content %}
 <main>
   <div class="l-container">
-    <p>Homepage</p>
+    <p>Contact</p>
   </div>
 </main>
 {% endblock %}
