--- a/src/assets/scss/settings/_settings.colors.scss
+++ b/src/assets/scss/settings/_settings.colors.scss
@@ -1,3 +1,7 @@
+// ----------------------------------
+// =colors
+// ----------------------------------
+
 :root {
   --color-white: #ffffff;
   --color-black: #000000;
