--- a/src/assets/scss/settings/_settings.fonts.scss
+++ b/src/assets/scss/settings/_settings.fonts.scss
@@ -1,3 +1,7 @@
+// ----------------------------------
+// =fonts
+// ----------------------------------
+
 :root {
   --fontstack-main: "Open Sans", "Helvetica", "Arial", sans-serif;
 }
