--- a/src/assets/scss/components/_components.mainnav.scss
+++ b/src/assets/scss/components/_components.mainnav.scss
@@ -8,20 +8,34 @@
   padding: 0;
 
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  @include breakpoint(small) {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .c-mainnav__item:not(:last-child) {
-  margin-right: calc(6 / 16 * 1rem);
+  @include breakpoint(small) {
+    margin-right: calc(6 / 16 * 1rem);
+  }
 }
 
 .c-mainnav__link {
   color: var(--color-black);
   text-decoration: none;
   display: inline-block;
-  padding: calc(12 / 16 * 1rem);
+  padding-top: calc(12 / 16 * 1rem);
+  padding-bottom: calc(12 / 16 * 1rem);
+
+  @include breakpoint(small) {
+    padding-left: calc(12 / 16 * 1rem);
+    padding-right: calc(12 / 16 * 1rem);
+  }
 }
 
 .c-mainnav__link.is-active {
