Add blog section, sample blogposts and data file, pagination, date macro

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer>
   <div class="l-container">
-    <p>&copy; Webstoemp - {{ site.buildTime | date("YYYY") }}</p>
+    <p>&copy; {{ site.title }} - {{ site.buildTime | date("YYYY") }}</p>
   </div>
 </footer>
