--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,3 +13,4 @@
 
 @import "components/_components.siteheader.scss";
 @import "components/_components.mainnav.scss";
+@import "components/_components.pagination.scss";
