Add images to blogposts, basic typography basic layout
fixes #9

--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,5 +1,5 @@
-<footer>
+<footer class="c-sitefooter">
   <div class="l-container">
-    <p>&copy; {{ site.title }} - {{ site.buildTime | date("YYYY") }}</p>
+    <p class="c-sitefooter__copyright">&copy; {{ site.title }} - {{ site.buildTime | date("YYYY") }}</p>
   </div>
 </footer>
