--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,8 @@
 
 @import "mixins/mixins.breakpoints.scss";
 
+@import "objects/objects.fluidimages.scss";
+
 @import "base/_base.fonts.scss";
 @import "base/_base.margins.scss";
 @import "base/_base.body.scss";
@@ -12,5 +14,8 @@
 @import "layout/_layout.container.scss";
 
 @import "components/_components.siteheader.scss";
+@import "components/_components.sitefooter.scss";
 @import "components/_components.mainnav.scss";
 @import "components/_components.pagination.scss";
+@import "components/_components.blogpost.scss";
+@import "components/_components.titles.scss";
