--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -12,7 +12,7 @@ permalink: about/index.html
 {% block content %}
 <main>
   <div class="l-container">
-    <p>About</p>
+    <h1 class="c-h1">About</h1>
   </div>
 </main>
 {% endblock %}
