--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -19,7 +19,7 @@ permalink: blog{% if pagination.pageNumber > 0 %}/p{{ pagination.pageNumber + 1 
 <main>
   <div class="l-container">
 
-    <h1>Blog archive</h1>
+    <h1 class="c-h1">Blog archive</h1>
 
     {% for item in blogposts %}
       {% if loop.first %}<ul>{% endif %}
