--- a/src/pages/contact.njk
+++ b/src/pages/contact.njk
@@ -12,7 +12,7 @@ permalink: contact/index.html
 {% block content %}
 <main>
   <div class="l-container">
-    <p>Contact</p>
+    <h1 class="c-h1">Contact</h1>
   </div>
 </main>
 {% endblock %}
