--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,7 +12,7 @@ permalink: index.html
 {% block content %}
 <main>
   <div class="l-container">
-    <p>Homepage</p>
+    <h1 class="c-h1">Homepage</h1>
   </div>
 </main>
 {% endblock %}
