Update dependencies, switch to esbuild

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -23,7 +23,7 @@
   <link rel="preload" as="font" crossorigin type="font/woff2" href="/assets/fonts/opensans-semibold-webfont.woff2">
 
   {# JS (defer) #}
-  <script src="/assets/js/bundle.min.js?ref={{ site.buildDate | date('X') }}" defer></script>
+  <script src="/assets/js/main.bundle.js?ref={{ site.buildDate | date('X') }}" defer></script>
 
   {# CSS #}
   <link rel="stylesheet" href="/assets/css/main.css?ref={{ site.buildDate | date('X') }}">
