--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,5 +1,5 @@
 <header class="c-siteheader">
   <div class="c-siteheader__inner  l-container">
-    {% include "components/mainnav.njk" %}
+    {% include "partials/mainnav.njk" %}
   </div>
 </header>
