--- a/src/content/pages/blog.njk
+++ b/src/content/pages/blog.njk
@@ -35,7 +35,7 @@ permalink: blog{% if pagination.pageNumber > 0 %}/p{{ pagination.pageNumber + 1 
       <p>No blogposts found</p>
     {% endfor %}
 
-    {% include "components/pagination.njk" %}
+    {% include "partials/pagination.njk" %}
 
   </div>
 </main>
