--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
 <footer class="c-sitefooter">
   <div class="l-container">
-    <p class="c-sitefooter__copyright">&copy; {{ site.title }} - {{ site.buildTime | date("YYYY") }}</p>
+    <p class="c-sitefooter__copyright">&copy; {{ site.title }} - {{ site.buildDate | dateToFormat("yyyy") }}</p>
   </div>
 </footer>
