--- a/src/content/sitemap.njk
+++ b/src/content/sitemap.njk
@@ -24,7 +24,7 @@ permalink: sitemap.xml
   {% for post in collections.blogposts %}
     <url>
       <loc>{{ site.url }}{{ post.url }}</loc>
-      <lastmod>{{ post.date | date("ddd, DD MMM YYYY HH:mm:ss ZZ") }}</lastmod>
+      <lastmod>{{ post.date | dateToISO }}</lastmod>
       <changefreq>monthly</changefreq>
       <priority>1.0</priority>
     </url>
